fix: table columns truncation

--- a/pg_rails/scss/pg_rails.scss
+++ b/pg_rails/scss/pg_rails.scss
@@ -75,6 +75,7 @@ $values: 0, 10, 20, 30, 40, 50, 60, 70, 80, 90, 100;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
+    min-width: 30em * $value * 0.01;
   }
 }
 
